package Kasseapperatet;

import Varer.Kurv;
import Varer.Vare;

import java.util.ArrayList;

public class RegneArk {

    /*  der skal være 3 metoder i denne klasse
    1) ----metode der tæller hvor mange gentagelser der er i Arraylist/collection og ligger dem på samme linje

    2) ----Regne den samlede totalpris ud

    3) ----Regne moms-delen af totalprisen ud
     */



}
